fix: replace List.of() with Collections.emptyList() in SkinEntry
- Collections.emptyList() returns an immutable empty list without creating a new instance each time, reducing unnecessary object allocation
- Provides better performance characteristics compared to List.of() for this use case where an empty list is consistently needed
- Maintains API compatibility while improving efficiency across both 1.20.1 and 1.21.1 versions